2007-02-28  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-transform-resize.c: even more whitespace cleanup.

2007-02-28  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-resize.c: removed trailing whitespace.

2007-02-28  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-scale.c
	* app/core/gimpimage-rotate.c
	* app/core/gimpimage-resize.c
	* app/core/gimpimage-flip.c: cosmetics.

2007-02-27  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c: documentation.

2007-02-27  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptool.[ch]: clean up last commit a bit. Pass the
	recorded button_press_coords to GimpTool::button_release() when a
	click was detected.

2007-02-27  Sven Neumann  <sven@gimp.org>

	* app/config/gimpcoreconfig.c: increased default value for
	"undo-size" to 64 MB.

	* app/config/gimpguiconfig.c: increased default value for
	'max-new-image-size' to 128 MB.

2007-02-27  Michael Natterer  <mitch@gimp.org>

	Improve click behavior of rectangle tools. Addresses bug #410670.

	* app/tools/gimptoolcontrol.[ch]: added "gboolean wants_click"
	member and getters/setters.

	* app/tools/gimptool.[ch] (struct GimpTool): added members
	in_click_distance, press_coords and press_time.

	(gimp_tool_button_press): if the tool wants click events, record
	press_coords and press_time.

	(gimp_tool_motion): check if we are still in click distance.

	(gimp_tool_button_release): ditto. If we are still in click
	distance, synthesize a motion event back to the recorded
	press_coords and send the tool release_type = CLICK.

	(gimp_tool_check_click_distance): utility function which checks
	the current coords and time against the recorded ones, using
	gtk-double-click-time and gtk-double-click-distance as thresholds.

	* app/tools/gimpcroptool.c
	* app/tools/gimprectangleselecttool.c: request click events
	and handle them.

	* app/tools/gimprectangletool.[ch]: handle click events. Removed
	gimp_rectangle_tool_no_movement().
